# a2GoAT

./: .gitignore  CMakeLists.txt
ant/: A2GeoAcceptance.cc  A2GeoAcceptance.h  AntPhysics.cc  AntPhysics.h  CMakeLists.txt  Event.cc  Event.h  EventManager.cc  EventManager.h  Particle.cc  Particle.h  TaggerHit.h  Track.h  TriggerInfo.h
ant/analysis/: Basic.cc  DataOverview.cc  DataOverview.h  DeltaPlusPhysics.cc  DeltaPlusPhysics.h  GeoAcceptance.cc  GeoAcceptance.h  MCOverview.cc  MCOverview.h  MCSingleParticles.cc  MCSingleParticles.h  RecoCheck.cc  SplitCheck.cc  TestAPLCON.cc  TestAPLCON.h  TestPhysics.cc  TestPhysics.h  mctrue_acceptance.cc  mctrue_acceptance.h  omega.cc  omega.h  omega_bottomup.cc  omega_bottomup.h
ant/plot/: Hist.cc  Hist.h  Histogram.cc  Histogram.h  HistogramFactories.cc  HistogramFactories.h  SmartHist.cc  SmartHist.h  plotter.h  root_draw.cc  root_draw.h
ant/progs/: ant_test.cc  ant_testphysics.cc  ant_with_aplcon.cc  ant_with_goat.cc  histo-dev.cc  omega_analysis.cc  shared_test.cc
ant/utils/: matcher.h
cmake/Modules/: FindPluto.cmake
configfiles/cuts/: TAPS_ClusterSize.root  TAPS_PSA.root  TAPS_TOF.root
inc/: GConfigFile.h  GH1.h  GHistBGSub.h  GHistBGSub2.h  GHistBGSub3.h  GHistManager.h  GHistScaCor.h  GHistScaCor2.h  GHistScaCor3.h  GHistTaggerBinning.h  GHistTaggerBinning2.h  GMesonReconstruction.h  GParticleReconstruction.h  GSort.h  GTree.h  GTreeA2Geant.h  GTreeDetectorHits.h  GTreeEventParameters.h  GTreeLinPol.h  GTreeManager.h  GTreeMeson.h  GTreeParameters.h  GTreeParticle.h  GTreePluto.h  GTreeRawEvent.h  GTreeRawParticle.h  GTreeScaler.h  GTreeSetupParameters.h  GTreeTagger.h  GTreeTrack.h  GTreeTrigger.h  GoAT.h  GoatExceptions.h  NeutralsTimeCorrelations.h  PPhysics.h  PPi0Example.h  PTaggEff.h  PiMinusProton.h
macros/: DrawCluster.C  RenameGoAT.C  TaggEffBgSub.C
scripts/: GoAT.sh  GoATFarm  GoATNode  GoATSubmit  NewPhysics.sh
src/: GConfigFile.cc  GDataChecks.cc  GHistBGSub.cc  GHistBGSub2.cc  GHistBGSub3.cc  GHistManager.cc  GHistScaCor.cc  GHistScaCor2.cc  GHistScaCor3.cc  GHistTaggerBinning.cc  GHistTaggerBinning2.cc  GMesonReconstruction.cc  GParticleReconstruction.cc  GSort.cc  GTree.cc  GTreeA2Geant.cc  GTreeDetectorHits.cc  GTreeEventParameters.cc  GTreeLinPol.cc  GTreeManager.cc  GTreeMeson.cc  GTreeParameters.cc  GTreeParticle.cc  GTreePluto.cc  GTreeRawEvent.cc  GTreeRawParticle.cc  GTreeScaler.cc  GTreeSetupParameters.cc  GTreeTagger.cc  GTreeTrack.cc  GTreeTrigger.cc  GoAT.cc  NeutralsTimeCorrelations.cc  NeutralsTimeCorrelations_main.cc  PPhysics.cc  PPi0Example.cc  PTaggEff.cc  PiMinusProton.cc  PiMinusProton_main.cc  TaggEff_main.cc  (+2 more)
